--- a/.github/workflows/docker-image.yml/docker-image.yml
+++ b/.github/workflows/docker-image.yml/docker-image.yml
@@ -1,20 +1,16 @@
-name: Build and Push Docker image
-
 on:
   push:
     branches:
-      - master  # Puedes cambiar esta rama a `develop` si prefieres
+      - master
+      - develop
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -23,12 +19,11 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest
-
-    - name: Image digest
-      run: echo ${{ steps.docker.outputs.digest }}
-
+      run: |
+        if [ "${{ github.ref }}" == "refs/heads/master" ]; then
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest
+        else
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop .
+          docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop
+        fi
