--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,11 @@
+name: Build and Deploy Docker Image
+
+# Disparar acciones en push a las ramas 'develop' o 'master'
 on:
   push:
     branches:
-      - master
       - develop
+      - master
 
 jobs:
   build:
@@ -11,6 +14,9 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -23,7 +29,11 @@ jobs:
         if [ "${{ github.ref }}" == "refs/heads/master" ]; then
           docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest
-        else
+        elif [ "${{ github.ref }}" == "refs/heads/develop" ]; then
           docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop .
           docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop
         fi
+
+    - name: Image digest
+      run: echo ${{ steps.docker.outputs.digest }}
+
