--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,20 +1,20 @@
-# Usa una imagen base oficial de Node.js
-FROM node:20
+# Usa una imagen base de Node.js
+FROM node:18
 
-# Establece el directorio de trabajo dentro del contenedor
+# Crea un directorio de trabajo
 WORKDIR /app
 
-# Copia el package.json y package-lock.json
+# Copia los archivos package.json y package-lock.json
 COPY package*.json ./
 
-# Instala las dependencias de la aplicación
+# Instala las dependencias
 RUN npm install
 
-# Copia el resto de la aplicación al directorio de trabajo
+# Copia el resto de la aplicación
 COPY . .
 
-# Expone el puerto en el que la app corre (por ejemplo, 3000)
+# Expone el puerto (si lo necesitas)
 EXPOSE 3000
 
-# Comando para correr la aplicación
+# Ejecuta la aplicación
 CMD ["node", "index.js"]
