--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,16 @@
 name: Build and Deploy Docker Image
 
-# Disparar acciones en push a las ramas 'develop' o 'master'
+# Disparar acciones solo cuando se complete un pull request en la rama master
 on:
-  push:
+  pull_request:
     branches:
-      - develop
       - master
+    types:
+      - closed
 
 jobs:
   build:
+    if: github.event.pull_request.merged == true  # Asegurarse de que se ejecute solo cuando el PR ha sido mergeado
     runs-on: ubuntu-latest
 
     steps:
@@ -26,14 +28,8 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        if [ "${{ github.ref }}" == "refs/heads/master" ]; then
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest
-        elif [ "${{ github.ref }}" == "refs/heads/develop" ]; then
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop .
-          docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:develop
-        fi
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/mi-api-node:latest
 
     - name: Image digest
       run: echo ${{ steps.docker.outputs.digest }}
-
