--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "hithelexx",
   "license": "ISC",
-  "description": ""
+  "description": "API simple con Express"
 }
+
+
